[Service discovery] Implement service discovery & load balancing
- Declared PC and PO as eurika clients
- PC is discovered by PO via eurika
- Requests to PC are load balanced via Feign

--- a/pc/src/main/resources/application.yml
+++ b/pc/src/main/resources/application.yml
@@ -5,3 +5,13 @@ spring:
     mongodb:
       host: localhost
       name: embeded_db
+  application:
+    name: catalog
+logging:
+  level:
+    org:
+      nipu: DEBUG
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8083/eureka/
