--- a/po/pom.xml
+++ b/po/pom.xml
@@ -67,6 +67,10 @@
             <artifactId>embedmongo-spring</artifactId>
             <version>RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
 
     </dependencies>
 
