--- a/po/src/main/resources/application.yml
+++ b/po/src/main/resources/application.yml
@@ -5,3 +5,13 @@ spring:
     mongodb:
       host: localhost
       name: embeded_db
+  application:
+    name: po
+logging:
+  level:
+    org:
+      nipu: DEBUG
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8083/eureka/
