[API Gateway] Add API Gateway module

--- a/pom.xml
+++ b/pom.xml
@@ -28,5 +28,6 @@
         <module>pc</module>
         <module>po</module>
         <module>sr-and-ds</module>
+        <module>api-gateway</module>
     </modules>
 </project>
